# GLtest211A

./: .gitignore  CMakeLists.txt  HW4-Report.docx  README.md  custom.hpp  frag.txt  frag_gouraud.txt  frag_phong.txt  main.cpp  vertex.txt  vertex_gouraud.txt  vertex_phong.txt
